// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-template Renders \`field-template\` with custom props 1`] = `
<div
  class="widget-settings-flat-item v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="v-list-item__content"
  >
    <div
      class="v-list-item__title"
    >
      Custom title
    </div>
  </div>
  <div
    class="v-list-item__action mr-3"
  >
    <button
      class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Show/Edit
      </span>
    </button>
  </div>
</div>
`;

exports[`field-template Renders \`field-template\` with required props 1`] = `
<div
  class="widget-settings-flat-item v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="v-list-item__content"
  >
    <div
      class="v-list-item__title"
    >
      Custom required title
    </div>
  </div>
  <div
    class="v-list-item__action mr-3"
  >
    <button
      class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Show/Edit
      </span>
    </button>
  </div>
</div>
`;
